--- a/css/index.css
+++ b/css/index.css
@@ -52,3 +52,32 @@
         height: 100vh;
     }
 }
+
+.honolulu {
+    height: 100px;
+    width: 100%;
+    height: auto;
+}
+
+footer {
+    background-color: rgba(30, 81, 110, 255);
+}
+
+.btn-custom {
+    background-color: rgba(150, 201, 62, 255);
+    color: white;
+}
+
+@media (min-width: 1200px) {
+
+    .seven-cols .col-md-1,
+    .seven-cols .col-sm-1,
+    .seven-cols .col-lg-1 {
+        width: 14.285714285714285714285714285714%;
+        *width: 14.285714285714285714285714285714%;
+    }
+}
+
+body {
+    overflow-x: hidden;
+}
